--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hello world</h1>
+<p> The worl need a good guy</p>
+<img src="c:\Users\NEC\Downloads\download.jpeg" alt="">
 </body>
 </html>
