"Removed css file and updated index.html with new title, link to stylesheet, and h1 tag."

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orbit Classic</title>
+    <h2>This is my first html work space</h2>
+    <p>how to improve my coding skills</p>s
 </head>
 <body>
-    <h1>Hello world</h1>
-<p> The worl need a good guy</p>
-<img src="c:\Users\NEC\Downloads\download.jpeg" alt="">
+    
 </body>
 </html>
